syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.company";
option java_outer_classname = "CompanyProto";

message CompanyCreateRequest {
  string name = 1;
  uint64 started_at = 2;
  uint64 ended_at = 3;
  bool is_working = 4;
}

message CompanyUpdateRequest {
  message CompanyPosition {
    string id = 1;
    string name = 2;
    uint64 started_at = 3;
    optional uint64 ended_at = 4;
  }
  message CompanySalary {
    string id = 1;
    uint64 amount = 2;
    uint64 started_at = 3;
    optional uint64 ended_at = 4;
  }

  string id = 1;
  string name = 2;
  uint64 started_at = 3;
  optional uint64 ended_at = 4;
  bool is_working = 5;

  repeated CompanyPosition positions = 98;
  repeated CompanySalary salaries = 99;
}

message CompanyListResponse {
  repeated Company companies = 1;
}